# sdmx-rs

./: .editorconfig  .envrc  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  cliff.toml  codecov.yaml  commitlint.config.cjs  deny.toml  flake.nix  maintenance.toml  release.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: .markdownlint.yaml  CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: 01_feature.md  02_fix.md  03_docs.md  04_chore.md
.github/maintainer-keys/: dgalbraith.asc
.github/workflows/: ci.yml  publish.yml  verify-signature.yml
crates/sdmx-client/: Cargo.toml  README.md
crates/sdmx-client/examples/: README.md
crates/sdmx-client/src/: lib.rs
crates/sdmx-parsers/: Cargo.toml  README.md
crates/sdmx-parsers/benches/: README.md
crates/sdmx-parsers/examples/: README.md
crates/sdmx-parsers/src/: lib.rs
crates/sdmx-rs/: Cargo.toml  README.md
crates/sdmx-rs/examples/: README.md
crates/sdmx-rs/release-notes/: .markdownlint.yaml  README.md
crates/sdmx-rs/release-notes/templates/: template.md
crates/sdmx-rs/src/: lib.rs
crates/sdmx-types/: Cargo.toml  README.md  xsd-manifest.toml
crates/sdmx-types/docs/xsd-fragments/: .markdownlint.yaml  AgencySchemeType.md  AgencyType.md  AnnotationType.md  AnnotationURLType.md  AnyCodelistReferenceType.md  AttributeListType.md  AttributeRelationshipType.md  AttributeType.md  AvailabilityConstraintAttachmentType.md  AvailabilityConstraintType.md  BasicTimePeriodType.md  CascadeSelectionType.md  CodeSelectionType.md  CodeType.3.0.md  CodeType.3.1.md  CodedTextFormatType.md  CodelistExtensionType.md  CodelistReferenceType.md  CodelistType.md  ComponentValueSetType.md  ConceptReferenceType.md  ConceptSchemeType.md  ConceptType.md  ConstraintRoleType.md  ContactType.md  CubeKeyValueType.md  CubeRegionKeyType.md  CubeRegionType.md  DataComponentValueSetType.md  DataComponentValueType.md  DataConstraintAttachmentType.3.0.md  DataConstraintAttachmentType.3.1.md  DataConstraintType.md  DataKeySetType.md  DataKeyType.md  DataKeyValueType.3.0.md  DataKeyValueType.3.1.md  DataProviderReferenceType.md  DataStructureReferenceType.md  (+43 more)
crates/sdmx-types/examples/: README.md
crates/sdmx-types/src/: annotation.rs  artefact.rs  attribute.rs  codelist.rs  component.rs  concept.rs  constraint.rs  data_structure.rs  dataflow.rs  descriptor.rs  dimension.rs  error.rs  fixed.rs  lexical.rs  lib.rs  localised.rs  measure.rs  metadata.rs  organisation.rs  reference.rs  representation.rs  scheme.rs  sealed.rs  test_strategy.rs  test_support.rs  validate.rs  valuelist.rs
crates/sdmx-writers/: Cargo.toml  README.md
crates/sdmx-writers/examples/: README.md
crates/sdmx-writers/src/: lib.rs
docs/: README.md  decisions.md
docs/adr/: 0001-record-architecture-decisions.md  0002-workspace-wide-safety-policy-banning-unsafe-code.md  0003-workspace-crate-facade-and-version-pinning-strategy.md  0004-decoupled-crate-versioning-strategy.md  0005-adopt-no-std-with-alloc-for-sdmx-types-and-sdmx-parsers.md  0006-standardise-error-handling-with-thiserror-per-crate.md  0007-headless-webassembly-execution-verification.md  0008-model-sdmx-3-0-and-3-1-divergence-with-a-unified-constraintmodel.md  0009-use-quick-xml-and-serde-json-for-streaming-deserialisation.md  0009-use-quick-xml-and-serde-json-for-streaming-deserialization.md  0010-parser-fuzzing-suite-and-panic-profile-configuration.md  0011-use-tokio-as-the-primary-async-runtime.md  0012-use-reqwest-over-hyper-and-ureq-for-the-http-client.md  0013-use-rustls-over-native-tls-for-transport-layer-security.md  0014-fallible-client-construction-and-custom-error-mapping.md  0015-send-and-intofuture.md  0016-type-parameter-count.md  0017-sdmx-csv-stream-parsing-strategy.md  0018-content-type-negotiation-and-parser-routing.md  0019-xml-namespace-aware-parsing.md  0020-shell-script-test-environment-isolation.md  0021-domain-invariant-validation-and-encapsulation-strategy.md  0022-owned-string-ownership-strategy.md  0023-two-layer-infoset-store-and-derived-views-architecture.md  0024-byte-preserving-document-integrity-pathway.md  README.md
docs/design/: 0001-design-documentation-process.md  0002-sdmx-csv-stream-parsing-design.md  0003-typestate-query-builders-design.md  0004-release-publish-pipeline-and-supply-chain-provenance.md  0005-synchronous-and-blocking-api-execution-bridge.md  0006-builder-field-storage.md  0007-typestate-query-validation.md  0008-target-version-policy-for-serialisation.md  0008-target-version-policy-for-serialization.md  0009-maintenance-obligation-tracking-system-design.md  0010-sdmx-core-domain-types-design.md  README.md
docs/dev/: README.md  documentation.md  practices.md  rustdoc.md  testing.md  tooling.md  workflow.md
docs/guides/: README.md  guide-documentation-process.md
docs/project/: README.md  ci-gating.md  forge-setup.md  maintenance.md  merging.md  msrv.md  performance.md  phases.md  registry-setup.md  releasing.md  reviews.md
docs/user/: README.md  (+1 more)
examples/: README.md
forge/: README.md
registry/: README.md
scratch/: flake.nix
scripts/: changelog-generate.sh  check-changelog.sh  check-conventions.sh  check-decision-refs.sh  check-local-links.sh  check-maintenance.sh  check-release-notes.sh  check-scaffolding.sh  check-semver.sh  check-shebangs.sh  check-test-manifests.sh  check-xsd-fragments.sh  common.sh  doc-engine.sh  doctor-ci.sh  doctor-devshell.sh  doctor-direnv.sh  doctor-docs.sh  doctor-env.sh  doctor-forge.sh  doctor-git.sh  doctor-hooks.sh  doctor-monorepo.sh  doctor-nix.sh  doctor-provenance.sh  doctor-quick.sh  doctor-registry.sh  doctor-toolchain.sh  doctor-workspace.sh  fetch-specs.sh  forge-apply.sh  gen-xsd-fragments.sh  guard-main-push.sh  maintenance-bump.sh  maintenance-sync.sh  new-release-notes.sh  prep-release.sh  prepublish-check.sh  registry-tp.sh  release-commit-changelogs.sh  (+16 more)
specs/: NOTICE  README.md  sources.toml
(+167 files in other folders)
