[package]
name = "sdmx-types"
version = "0.0.0"
edition.workspace = true
rust-version = "1.92.0"
authors.workspace = true
description = "Core SDMX domain types, data structures, and validation invariants with strict no_std compatibility."
readme = "README.md"
categories = ["data-structures", "no-std"]
keywords = ["sdmx", "types", "metadata", "model", "statistics"]
license.workspace = true
repository.workspace = true
homepage.workspace = true

# Dev-only assets for the design_docs layer: the XSD contract fragments are
# include_str!'d solely under cfg(design_docs) (never docs.rs or a normal build),
# so they and their manifest stay out of the published crate.
exclude = ["xsd-manifest.toml", "docs/"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Exercises the custom Deserialize impls (§7 construction contract): round-trip and
# invariant-rejection tests deserialize through the validated constructors.
serde_json = { workspace = true }

# Scaffold: wasm-bindgen-test for Node.js WASM test execution (ADR-0007).
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# serde / thiserror / chrono are now actively used (Milestone 1), so they are no longer
# suppressed — machete will flag them if they ever fall out of use. Only the platform-specific
# WASM test harness stays ignored (it is referenced exclusively under cfg(target_arch = wasm32)).
[package.metadata.cargo-machete]
ignored = [
  "wasm-bindgen-test", # PERMANENT: platform-specific (cfg(wasm32) for WASM testing)
]
