[package]
name = "sdmx-writers"
version = "0.0.0"
edition.workspace = true
rust-version = "1.92.0"
authors.workspace = true
description = "High-performance SDMX serialisation adapter for multiple output formats."
readme = "README.md"
categories = ["encoding", "no-std"]
keywords = ["sdmx", "serialization", "xml", "json"]
license.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
sdmx-types = { version = "=0.0.0", path = "../sdmx-types" }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { workspace = true }
thiserror = { workspace = true }

# Scaffold: wasm-bindgen-test for Node.js WASM test execution (ADR-0007).
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

# Scaffold: all dependencies suppressed until implementation begins.
# Remove each entry here as it is actively used — machete will then flag genuine dead deps.
[package.metadata.cargo-machete]
ignored = [
  "sdmx-types",        # Phase 2: depends on core types; unignore when implementation begins
  "serde",             # Phase 2: serialisation trait derives for output formats
  "serde_json",        # Phase 2: JSON serialisation support
  "quick-xml",         # Phase 2: XML serialisation support
  "thiserror",         # Phase 1: error type definitions
  "wasm-bindgen-test", # PERMANENT: platform-specific (cfg(wasm32) for WASM testing)
]
